update codes & rpr report

--- a/procedure/code/01-R-markdown.Rmd
+++ b/procedure/code/01-R-markdown.Rmd
@@ -262,35 +262,47 @@ L2A includes elevation data. The original study computed slope and topographic p
 
 ### Human Development Index (HDI)
 
-- `Variables`: SR.mean, FR, and PD
-  - `Label`: variable name as used in the data or code
-  - `Alias`: intuitive natural language name
-  - `Definition`: Short description or definition of the variable. Include measurement units in description.
-  - `Type`: data type, e.g. character string, integer, real
-  - `Accuracy`: e.g. uncertainty of measurements
-  - `Domain`: Range (Maximum and Minimum) of numerical data, or codes or categories of nominal data, or reference to a standard codebook
-  - `Missing Data Value(s)`: Values used to represent missing data and frequency of missing data observations
-  - `Missing Data Frequency`: Frequency of missing data observations
+Human Development Index for each country was included in the causal models as a simple metric of socioeconomic level.
 
+- `Title`: Human Development Index
+- `Abstract`: An index on the level of human development by country.
+- `Spatial Coverage`: Tropical region (overlapping countries of Brunei, Cambodie, China, Indonesia, Laos, Malaysia, Singapore, Thailand, and Vietnam).
+- `Spatial Resolution`: Not applicable.
+- `Spatial Reference System`: Not applicable.
+- `Temporal Coverage`: 2020.
+- `Temporal Resolution`: Not applicable.
+- `Lineage`: Direct query thourgh the official website.
+- `Distribution`: Acquired directly through [Human Development Report 2020](https://hdr.undp.org/sites/default/files/2021-22_HDR/HDR21-22_Statistical_Annex_HDI_Table.xlsx).
+- `Constraints`: Non-commercial use.
+- `Data Quality`: Unknown.
 
+- `Variables`: HDI
+  - `Label`: Not included in the files shared by the original study, we added HDI values and labeled as 'HDI'.
+  - `Alias`: Human Development Index
+  - `Definition`: A metric on the level of human development.
+  - `Type`: Float
+  - `Accuracy`: Unknown
+  - `Domain`: 0 to 1
+  - `Missing Data Value(s)`: Not applicable
+  - `Missing Data Frequency`: Not applicable
 
-
-### GEDI-based metrics
-| Label | Alias | Definition | Type | Accuracy | Domain | Missing Data Value(s) | Missing Data Frequency |
-| :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
-| variable1 | ... | ... | ... | ... | ... | ... | ... |
-| variable2 | ... | ... | ... | ... | ... | ... | ... |
-
-... same form as above...
 
 ## Prior observations  
 
-At the beginning of this analysis, we had observed the dataset provided by Brodie et al with their publication. 
-We did not manipulate the data before beginning our replication attempt. 
+At the beginning of this analysis, we had observed the dataset provided by Brodie et al with their publication. We noticed the following caveats in the script and raw data shared by the original study.
+1) HDI was missing.
+2) The process of variable construction for biodiversity metrics and GEDI metrics were unclear.
+3) The procedure for preprocessing and cleaning PA boundaries was unclear.
+
+We did not manipulate the data before beginning our reproduction attempt. 
 
 ## Bias and threats to validity
 
 Given the research design and primary data to be collected and/or secondary data to be used, discuss common threats to validity and the approach to mitigating those threats, with an emphasis on geographic threats to validity.
+
+Given the research design as described in the original paper and primary data shared, we identify potential spatial autocorrelation of sample points were not addressed.
+// should we add a map/moran's I result here?
+// other concerns to add?
 
 These include:
   - uneven primary data collection due to geographic inaccessibility or other constraints
@@ -307,6 +319,10 @@ These include:
   - uncertainty e.g. from spatial disaggregation, anonymization, differential privacy
 
 ## Data transformations
+
+We did the following data transformations:
+1) 
+
 
 Describe all data transformations planned to prepare data sources for analysis.
 This section should explain with the fullest detail possible how to transform data from the **raw** state at the time of acquisition or observation, to the pre-processed **derived** state ready for the main analysis.
@@ -326,6 +342,241 @@ Be sure to include any steps planned to **exclude** observations with *missing* 
 Describe the methods of analysis that will directly test the hypotheses or provide results to answer the research questions.
 This section should explicitly define any spatial / statistical *models* and their *parameters*, including *grouping* criteria, *weighting* criteria, and *significance thresholds*.
 Also explain any follow-up analyses or validations.
+
+### Draw the causal diagram
+
+```{r 1_scm, echo=T} 
+# Load libraries
+# library(groundhog)
+pkgs <- c("dagitty", "ggdag")
+# groundhog.library(pkgs, "2023-12-05")
+lapply(pkgs, require, character.only=TRUE)
+
+# ------------------------------------------------------------------------------
+# Structural Causal Modelling  
+# ------------------------------------------------------------------------------
+
+# Create the directed acyclic graph (DAG) of potential causal pathways with the 
+# addition of connectivity as a moderator of the PA effect. Assign PA as 
+# the exposure and diversity as the outcome.
+# Connectivity -> Diversity
+dagBrodie <- dagitty("dag {
+  PA -> Diversity
+  ForestStructure -> PA
+  SiteAccessibility -> PA
+  Bioclimate -> ForestStructure -> PA -> Diversity
+  Bioclimate -> UnderstoryDensity -> Diversity
+  Bioclimate -> Diversity
+  Elevation -> Bioclimate
+  Elevation -> ForestStructure
+  Elevation -> UnderstoryDensity
+  Elevation -> SiteAccessibility
+  Topography -> UnderstoryDensity
+  Topography -> ForestStructure
+  Topography -> SiteAccessibility
+  Topography -> Diversity
+  HDI -> Diversity
+  PA [exposure]
+  Diversity [outcome]
+               }"
+)
+
+# Organize the data into a visual hierarchy
+coordinates( dagBrodie ) <-  list(x = c(Diversity = 3, 
+                                        UnderstoryDensity = 1, 
+                                        ForestStructure = 2, 
+                                        PA = 3, 
+                                        SiteAccessibility = 4, 
+                                        HDI = 5, 
+                                        Bioclimate = 2, 
+                                        Elevation = 3, 
+                                        Topography = 4
+                                        #, Connectivity = 6
+                                        ),
+                                  y = c(Diversity = 3, 
+                                        UnderstoryDensity = 2, 
+                                        ForestStructure = 2, 
+                                        PA = 2, 
+                                        SiteAccessibility = 2, 
+                                        HDI = 2, 
+                                        Bioclimate = 1, 
+                                        Elevation = 1, 
+                                        Topography = 1
+                                    #    , Connectivity = 2
+                                        ))
+
+# Plot the DAG to confirm the visual structure and exposure
+ggdag_status(dagBrodie) + theme_dag()
+
+# Identify the set of adjustment variables needed to identify 
+# the effect of PA on biodiversity and Test whether connectivity fulfills the 
+# adjustment criterion
+adjustmentSets(dagBrodie)
+# isAdjustmentSet(dagBrodie, c("Connectivity"))
+
+# Plot the alternative adjustment sets
+# ggdag_adjustment_set(dagBrodie, 
+#                      node_size = 20, 
+#                      text_col = "black"
+# ) + ggplot2::theme(legend.position = "bottom")
+
+
+```
+
+### Clean protected areas (might take a while to run)
+
+
+```{r 2_cleanPAs, echo=T}
+# Load libraries, easy to switch to use groundhog
+# something wrong with the path in rmd --> reset path
+# requires PhantomJS: webdriver::install_phantomjs()
+pkgs <- c("sf", "dplyr", "terra", "optparse", "wdpar", "here")
+setwd(here(''))
+print(getwd())
+sapply(pkgs, require, character.only = TRUE)
+sf_use_s2(FALSE) # deal with buffering odd
+
+# Command line inputs
+option_list <- list(
+    make_option(c("-s", "--src_dir"), 
+                action = "store", default = "data/raw/public", type = 'character',
+                help = "The source directory for reading data [default %default]."),
+    make_option(c("-d", "--dst_dir"), 
+                action = "store", default = 'data/derived/public', type = 'character',
+                help = paste0("The path to save the csv [default %default].")))
+opt <- parse_args(OptionParser(option_list = option_list))
+
+# Directories and paths
+src_dir <- opt$src_dir
+dst_dir <- opt$dst_dir
+
+# Read samples and raster template
+## According to the pairs of lat/lon and east/north, they used
+## UTM Zone 46 (EPSG:32646) for projection, so here we will use the same one.
+## (Not mean it is the most right one to use)
+fnames <- list.files(file.path(src_dir, "training"), full.names = TRUE)
+print(file.path())
+pts <- do.call(rbind, lapply(fnames, function(fname){
+    read.csv(fname) %>% 
+        select(all_of(names(.)[
+            stringr::str_detect(names(.), "station|country|lat|long")])) %>% 
+        st_as_sf(coords = c(3, 2), crs = 4326)
+}))
+
+template <- rast(
+    file.path(src_dir, "GEDIv002_20190417to20220413_cover_krig.tiff")) %>% 
+    extend(c(100, 100)) # add a buffer
+values(template) <- 1:ncell(template)
+
+########################## Query Protected areas (PAs) #########################
+## Within this part, most of the issues related to PAs are solved 
+## 1. Project the PAs or relevant layers to use precise distance.
+## 2. Trim the PAs to terrestrial only.
+## 3. Separate or union polygons and re-index them.
+
+# Query and clean PAs
+raw_pas <- c("KHM", "CHN", "IDN", "LAO", "MYS", 
+             "SGP", "THA", "VNM", "BRN") %>%
+    lapply(wdpa_fetch, wait = TRUE,
+           download_dir = rappdirs::user_data_dir("wdpar")) %>%
+    bind_rows()
+raw_pas <- wdpa_clean(raw_pas, crs = "EPSG:32646",
+                      geometry_precision = 100000)
+raw_pas <- raw_pas %>% filter(MARINE != "marine")
+## Note: now the No is 1638
+
+# Trim the polygons to terrestrial only
+## Clip all not marine polygons to administrative border.
+## Use the same data source in examples of R package wdpar.
+raw_adm_bry <- lapply(
+    c("KHM", "CHN", "IDN", "LAO", "MYS", 
+      "SGP", "THA", "VNM", "BRN"), function(iso){
+          file_path <- tempfile(fileext = "rds")
+          lk <- "https://biogeo.ucdavis.edu/data/gadm3.6/Rsf"
+          download.file(sprintf("%s/gadm36_%s_0_sf.rds", lk, iso), file_path)
+          readRDS(file_path)}) %>% bind_rows()
+
+## Process the boundary a bit
+adm_bry <- raw_adm_bry %>%
+    st_set_precision(100000) %>%
+    sf::st_make_valid() %>%
+    st_set_precision(100000) %>%
+    st_combine() %>%
+    st_union() %>%
+    st_set_precision(100000) %>%
+    sf::st_make_valid() %>%
+    st_transform(st_crs(raw_pas)) %>%
+    sf::st_make_valid()
+
+## Clip it to boundary
+clean_pas <- raw_pas %>% st_intersection(adm_bry)
+## No of PAs drop from 1638 to 1618
+
+# Crop it to extent
+## WARNING: remember to re-run this step again after union/separate the polygons
+bbox <- st_as_sfc(st_bbox(template)) %>% st_transform(st_crs(clean_pas))
+clean_pas <- clean_pas %>% 
+    slice(unique(unlist(suppressMessages(st_intersects(bbox, .)))))
+## Note: No of PAs drop further to 1260
+
+# Union/separate polygons.
+# Have to drop the attributes. Shouldn't be a problem though.
+clean_pas <- st_cast(st_union(clean_pas), "POLYGON") %>% 
+    st_as_sf() %>% rename(geometry = x)
+## No of PAs change from 1260 to 4270 (lose administrative meaning)
+
+# Crop to extent again
+clean_pas <- clean_pas %>% 
+    slice(unique(unlist(suppressMessages(st_intersects(bbox, .))))) %>% 
+    mutate(index = 1:nrow(.))
+## No of PAs change from 4270 to 4259
+
+# Re-calculate the area
+clean_pas <- clean_pas %>% 
+    mutate(REP_AREA = st_area(.) %>% units::set_units("km2"))
+
+# Clean the tiny ones with "partial" marine type due to a high chance to be the
+# noisy remaining of the clip
+false_pas <- st_join(clean_pas, raw_pas %>% select(MARINE)) %>% 
+    filter(MARINE != "terrestrial" & REP_AREA < 0.01 %>% units::set_units("km2"))
+
+clean_pas <- clean_pas %>% filter(!index %in% unique(false_pas$index))
+
+######################### Cluster Protected areas (PAs) ########################
+## 4. Cluster the PAs that are connected. 
+## The assumption here is that it is difficult (if not possible) for mammals 
+## to pass the ocean or huge waterbodies.
+## Warning: this is only for mammal species
+adm_reorg <- raw_adm_bry %>% 
+    st_transform(st_crs(clean_pas)) %>% 
+    st_buffer(10) %>% st_union() %>% st_buffer(-10) %>% st_cast("POLYGON") %>% 
+    st_intersection(bbox) %>% st_as_sf() %>% mutate(group = 1:nrow(.)) %>% 
+    mutate(area = st_area(.) %>% units::set_units("km2"))
+
+clean_pas <- st_join(clean_pas, adm_reorg) # No is 2873
+
+## Clean further
+false_pas <- clean_pas %>% 
+    filter(area > 5e+05 %>% units::set_units("km2") & 
+               REP_AREA < 1 %>% units::set_units("km2"))
+clean_pas <- clean_pas %>% filter(!index %in% unique(false_pas$index)) # 2198
+
+## Re-index
+clean_pas <- clean_pas %>% mutate(index = 1:nrow(.)) %>% 
+    select(-area)
+
+adm_reorg <- adm_reorg %>% filter(group %in% clean_pas$group) %>% 
+    rename(geometry = x) %>% select(group)
+
+# Save out
+# st_write(clean_pas, file.path(dst_dir, "clean_pas.geojson"))
+# st_write(adm_reorg, file.path(dst_dir, "pa_groups.shp"))
+```
+
+
+### Data preparation
+
+### Model running
 
 # Results
 
